--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "jsbarcode": "^3.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-qr-barcode-scanner": "^2.1.8",
