--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "exifr": "^7.1.3",
+    "geolocation": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-qr-barcode-scanner": "^2.1.8",
     "react-router-dom": "^7.6.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
