--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "exifr": "^7.1.3",
+    "jsbarcode": "^3.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-qr-barcode-scanner": "^2.1.8",
+    "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
-    "axios": "^1.10.0",
-    "jsbarcode": "^3.12.1",
-    "react-router-dom": "^7.6.3"
-
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -30,7 +31,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-
     "vite": "^6.2.0"
   }
 }
